我的订单完成扣除余额完成

--- a/WebContent/view/address.html
+++ b/WebContent/view/address.html
@@ -499,6 +499,7 @@
 	<script src="js/loginutil.js"></script>
 	<script>
 	var loginUser;
+	var myPageNum = 1;
         $(function() {
             // Easy pie charts
             $('.chart').easyPieChart({animate: 1000});
@@ -560,6 +561,7 @@
         		success:function(data){
         			console.log(data);
         			if(data.status == 'success'){
+        				myPageNum = data.pageNum;
        					var rows = [];
            				rows = data.data;
         					var html = '';
@@ -585,12 +587,20 @@
              				var pageHtml = '';
              				if(data.pageTotal > 1){
              					pageHtml += '<li><a href="javascript:getAddressList('+(parseInt(data.pageNum)-1)+')">&laquo;</a></li>';
-                 				pageHtml += '<li class="active"><a href="#">1</a></li>';
-             					for(var i = 2 ; i <= data.pageTotal ; i++){
-             						pageHtml += '<li><a href="javascript:getAddressList('+i+')">'+i+'</a></li>';
+             					if(myPageNum == 1){
+             						pageHtml += '<li class="active"><a href="javascript:getAddressList(1)">1</a></li>';
+             					}else{
+             						pageHtml += '<li><a href="javascript:getAddressList(1)">1</a></li>';
              					}
-             					if(data.pageNum <= data.pageTotal){
-  	           					pageHtml += '<li><a href="javascript:getAddressList('+(parseInt(data.pageNum)+1)+')">&raquo;</a></li>';
+             					for(var i = 2 ; i <= data.pageTotal ; i++){
+             						if(myPageNum == i){
+             							pageHtml += '<li class="active"><a href="javascript:getAddressList('+i+')">'+i+'</a></li>';
+             						}else{
+             							pageHtml += '<li><a href="javascript:getAddressList('+i+')">'+i+'</a></li>';
+             						}
+             					}
+             					if(myPageNum <= data.pageTotal){
+  	           						pageHtml += '<li><a href="javascript:getAddressList('+(parseInt(data.pageNum)+1)+')">&raquo;</a></li>';
              					}else{
              						pageHtml += '<li><a href="#">&raquo;</a></li>';
              					}
